--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,13 +19,13 @@ AddOutputFilterByType DEFLATE text/html
 SetEnvIfNoCase Request_URI "\.(?:gif|jpe?g|png)$" no-gzip
 
 # Error
-ErrorDocument 500 ./500.html
-ErrorDocument 501 ./500.html
-ErrorDocument 502 ./500.html
-ErrorDocument 503 ./500.html
-ErrorDocument 504 ./500.html
+ErrorDocument 500 /500.html
+ErrorDocument 501 /500.html
+ErrorDocument 502 /500.html
+ErrorDocument 503 /500.html
+ErrorDocument 504 /500.html
 
-ErrorDocument 401 ./403.html
-ErrorDocument 502 ./403.html
-ErrorDocument 503 ./403.html
-ErrorDocument 404 ./404.html
+ErrorDocument 401 /403.html
+ErrorDocument 402 /403.html
+ErrorDocument 403 /403.html
+ErrorDocument 404 /404.html
